# Dynnax

./: .gitignore  Cargo.toml  readme.md  run-checks.sh  run-dead-x-sniper.sh  run-say-gm.sh  run.sh  run_backend.sh  run_checks.sh  run_dead_x_sniper.sh  session.session
.github/workflows/: ci.yml
backend/: .gitignore  Cargo.toml
backend/migrations/: 0001_create_snipe_targets_table.down.sql  0001_create_snipe_targets_table.up.sql  0002_create_x_snipe_target_table.down.sql  0002_create_x_snipe_target_table.up.sql  0003_add_is_user_to_snipe_targets.down.sql  0003_add_is_user_to_snipe_targets.up.sql
backend/src/: constants.rs  main.rs  state.rs  twitter_regex.rs  utils.rs
backend/src/db/: connect.rs
backend/src/db/queries/: mod.rs  snipe_targets.rs  x_snipe_targets.rs
backend/src/middlewares/: mod.rs
backend/src/models/: mod.rs  other.rs
backend/src/models/db/: mod.rs
backend/src/models/dtos/: snipe.rs
backend/src/models/pf/: mod.rs
backend/src/models/service/: snipe_target.rs
backend/src/pf/: mod.rs
backend/src/routes/: dbg.rs  mod.rs  pf.rs  snipe.rs  snipe_internal.rs  snipe_x.rs  snipe_x_internal.rs  tg.rs
backend/src/sniper/: mod.rs  snipe.rs  snipe_x.rs
backend/src/tg/: mod.rs  next_update_loop.rs  shill.rs  shutdown.rs
backend/src/tg/dialog/: clear_dialogs.rs  find_dialog.rs  get_dialogs.rs  mod.rs
backend/src/tg/sniper/: mod.rs  snipe.rs  snipe_x.rs
backend/src/types/: mod.rs  other.rs
backend/src/types/db/: mod.rs
backend/src/types/dtos/: mod.rs  snipe.rs  snipe_x.rs  tg.rs
dead_x_sniper/: Cargo.toml
dead_x_sniper/src/: main.rs
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  constants.ts  index.css  utils.tsx
frontend/src/api/: splTokens.ts  updateSnipeTarget.ts
frontend/src/components/dialog/: Dialog.module.scss  Dialog.tsx
frontend/src/components/slider/: Slider.module.scss  Slider.tsx
frontend/src/components/snipeTarget/: SnipeTarget.module.scss  SnipeTarget.tsx
frontend/src/components/toggle/: Toggle.module.scss  Toggle.tsx
frontend/src/components/token/: Token.module.scss  Token.tsx
frontend/src/components/tokenBuyPanel/: TokenBuyPanel.module.scss  TokenBuyPanel.tsx
frontend/src/store/: snipeTargetStore.ts  twitterSnipeTargetsStore.ts
migrations/: 0001_create_snipe_targets_table.up.sql
one_time_x_snipe/: Cargo.toml
one_time_x_snipe/src/: main.rs  state.rs
say_gm/: Cargo.toml
say_gm/src/: main.rs
shared/: Cargo.toml
shared/src/: constants.rs  lib.rs  twitter_regex.rs  types.rs  utils.rs
shared/src/db/: connect.rs  mod.rs
shared/src/pf/: mod.rs
shared/src/tg/: client.rs  config.rs  mod.rs
shared/src/tg/dialog/: clear_dialogs.rs  find_dialog.rs  get_dialogs.rs  mod.rs
soft_shills_manager/: Cargo.toml
src/: constants.rs  load_configurations.rs  main.rs  state.rs  types.rs  utils.rs
src/db/: connect.rs  mod.rs
src/db/queries/: mod.rs  snipe_targets.rs
src/models/: mod.rs  other.rs
src/models/db/: mod.rs
src/models/dtos/: create_snipe.rs  mod.rs  snipe.rs
src/models/pf/: mod.rs
src/models/service/: mod.rs  snipe_target.rs
src/models/snipe/: mod.rs
src/pf/: mod.rs
src/routes/: mod.rs  snipe.rs  tg.rs
src/tg/: clear_chats.rs  clear_dialogs.rs  client.rs  config.rs  get_dialogs.rs  get_updates.rs  mod.rs  next_update_loop.rs  snipe.rs  snipe_dialog.rs  snipe_x.rs
src/tg/dialog/: clear_dialogs.rs  get_dialogs.rs  mod.rs
src/tg/snipe/: mod.rs  snipe.rs  snipe_x.rs
src/tg/sniper/: snipe.rs  snipe_x.rs
