[package]
name = "backend"
version = "0.1.0"
edition = "2024"
authors = ["mail@diloytte.com"]
repository = "git@github.com:diloytte/Dynnax.git"
license = "MIT"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 } # For development

[dependencies]
# -- Async
tokio = { version = "1.44.1", features = ["full"] }

# -- Telegram
grammers-client = "0.7.0"
grammers-session = "0.7.0"

# -- Server
axum = { version = "0.8.3", features = ["macros"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.112"
ureq = { version = "3.0.10", features = ["json"] }
tower-http = { version = "0.6.2", features = ["cors"] }

# -- DB
sqlx = { version = "0.8.3", features = ["postgres","runtime-tokio-rustls"] }

# -- Other
dotenv = "0.15.0"
dashmap = "6.1.0"

# -- Cryptocurrencies
token_address_extractor = "1.2.0"
regex = "1.11.1"
lazy_static = "1.5.0"

shared = { path = "../shared" }

[profile.release]
strip = true        # Remove symbols from binary
opt-level = 3       # Maximum optimization for speed
lto = true          # Optimize at link stage ("fat")
codegen-units = 1   # Reduce parallel codegen to maximize optimizations
panic = "abort"     # Remove unwind information, reducing binary size and overhead (no backtraces in production)

[features]
default = []
production = []
