[package]
name = "one_time_x_snipe"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }

# -- Telegram
grammers-client = "0.7.0"
grammers-session = "0.7.0"

# -- Server
axum = { version = "0.8.3", features = ["macros"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.112"
ureq = { version = "3.0.10", features = ["json"] }
tower-http = { version = "0.6.2", features = ["cors"] }
dotenv = "0.15.0"
dashmap = "6.1.0"
shared = {path = "../shared"}